Fix warning, add FB tracking code

--- a/content/thanks/index.html
+++ b/content/thanks/index.html
@@ -3,5 +3,6 @@ title: Thanks
 ---
 
 <div class="container mx-auto py-5">
+    <h1>Thanks</h1>
     <p>Thank you for your message, we will be in touch the next business day to discuss with you further.</p>
 </div>
