Sticky footer and thanks redirect

--- a/content/thanks/index.html
+++ b/content/thanks/index.html
@@ -2,7 +2,12 @@
 title: Thanks
 ---
 
-<div class="container mx-auto py-5">
-    <h1>Thanks</h1>
-    <p>Thank you for your message, we will be in touch the next business day to discuss with you further.</p>
+<meta http-equiv="refresh" content="2;url=/" />
+
+<div class="container mx-auto px-4 py-20">
+    <div class="text-center pb-6">
+        <h2 class="main-heading">Thanks</h2>
+        <div class="divider mx-auto"></div>
+        <p>Thank you for your message, we will be in touch the next business day to discuss with you further.</p>
+    </div>
 </div>
